# PhishStop

./: .gitignore  README.md  pyproject.toml
app/: app.py
app/data_processing/: combine_parquet.py  feature_extraction.py  html_transformer.py  preprocessing_pipeline.py  process_mbox.py
app/frontend/: app.py
app/helpers/: download_files.py  keywords.py  transformers.py
app/models/: hybrid_mlp_model.py  hyperparameter_tuning.ipynb  mlp_training_pipeline.ipynb  train_models_with_wandb.ipynb
data/parquet/: process_mbox.py
data/phishing_domains/: full-domains-aa.txt  full-domains-ab.txt
output/saved_artifacts/: experiment_config.json  svd_transformer.pkl
output/saved_models/: mlp_hybrid.pth  tfidf_classifier.pkl  tfidf_vectorizer.pkl
output/saved_models_dnnda/: mlp_hybrid.pth
output/tuning_results/: optuna_results.json
output/tuning_results_dnnda/: mlp_results.json
