[project]
name = "phishstop"
version = "0.1.0"
description = ""
authors = [
    {name = "Latandu",email = "kuba.starogard@gmail.com"}
]
readme = "README.md"
dependencies = [
    "tldextract (>=5.3.0,<6.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pinecone (>=7.3.0,<8.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "polars (>=1.33.1,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "jsonpickle (>=4.1.1,<5.0.0)",
    "textstat (>=0.7.10,<0.8.0)",
    "xgboost (>=3.0.5,<4.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "torchaudio (>=2.5.1,<3.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "validators (>=0.35.0,<0.36.0)",
    "shap (>=0.50.0,<0.51.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "wandb (>=0.23.0,<0.24.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
]

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
torch = {source = "pytorch_gpu"}
torchvision = {source = "pytorch_gpu"}
torchaudio = {source = "pytorch_gpu"}

[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false